<resources>
    <string name="app_name">Songo Six</string>
    <string name="app_name_login_guru">Login Guru</string>
    <string name="noob_nip">NIP</string>
    <string name="noob_password">Password</string>
    <string name="noob_btlogin">Login</string>
    <string name="noob_sign_up">Register</string>
    <string name="noob_regist">Register Guru</string>
    <string name="noob_id">ID</string>
    <string name="noob_nama">Nama</string>
    <string name="noob_jenis_kelamin">Jenis Kelamin</string>
    <string name="noob_kelas">Kelas</string>
    <string name="nice_agama">Agama</string>
    <string name="app_name_siswa">Login Siswa</string>
    <string name="noob_nis">NIS</string>
    <string name="noob_password_siswa">Password Siswa</string>
    <string name="noob_btlogin_siswa">Login Siswa</string>
    <string name="noob_sign_up_siswa">Register Siswa</string>
    <string name="noob_regist_siswa">Register Siswa</string>
    <string name="noob_id_siswa">ID Siswa</string>
    <string name="noob_nama_siswa">Nama Siswa</string>
    <string name="noob_kelas_siswa">Kelas Siswa</string>
    <string name="noob_jenis_kelamin_siswa">Jenis Kelamin</string>
    <string name="noob_tmpt_lhr">Tempat Lahir</string>
    <string name="noob_tgl_lhr">Tanggal Lahir</string>
    <string name="nice_agama_siswa">Agama</string>
    <string name="noob_pilihan">Tombol Pilihan</string>
    <string name="noob__con_password">Confirm Password</string>
    <string name="app_name_Halaman_guru">Halaman Guru</string>
    <string name="noob_con_password_siswa">Confirm Password Siswa</string>
    <string name="noob_btRegister">Register</string>
    <string name="noob_judulsoal">Tambah Soal Pilihan Ganda</string>
    <string name="noob_idgroupsoalpg">Pilih ID Soal</string>
    <string name="noob_nomorsoal">Nomor Soal</string>
    <string name="noob_soal">Soal</string>
    <string name="noob_opsiA">Opsi A</string>
    <string name="noob_opsiB">Opsi B</string>
    <string name="noob_opsiC">Opsi C</string>
    <string name="noob_opsiD">Opsi D</string>
    <string name="noob_opsiE">Opsi E</string>
    <string name="noob_jawaban">Jawaban</string>
    <string name="noob_btnSimpan">Simpan</string>
    <string name="noob_thnMSK">Tahun Masuk</string>
    <string name="app_name_Halaman_siswa">Halaman Siswa</string>
    <string name="noob_pilih_soal">Pilih ID Group Soal Dan Kelas</string>
    <string name="noob_btMasuk">Masuk</string>
    <string name="noob_Midgs">Masukan ID Group Soal</string>
    <string name="noob_slmt_mgrjkn">Selamat Mengerjakan</string>
</resources>
